crates/data-dict/tests/snapshots/validate_spec__s11_empty_column_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: ""
        type: string
        examples: [a, b, c]
────────────────────────────────────────
error: [S11] Every column must have a non-empty `name`.
 --> dict.yaml:6:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: ""
  |               ^ the `name` is empty
